# chuxing

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: CLAUDE.md  __init__.py  main.py  win_entrypoint.py
backend/core/: CLAUDE.md  __init__.py  config.py  database.py  exceptions.py  postgres.py
backend/models/: CLAUDE.md  __init__.py  agent.py  conversation.py  message.py  moment.py  user.py
backend/repositories/: CLAUDE.md  __init__.py  agent.py  base.py  conversation.py  message.py  moment.py  user.py
backend/routers/: CLAUDE.md  __init__.py  agents.py  conversations.py  messages.py  moments.py  users.py
backend/services/: CLAUDE.md  __init__.py  agent.py  context_compression.py  conversation.py  llm.py  message.py  moment.py  user.py
cli/: CLAUDE.md  __init__.py  client.py  main.py
cli/commands/: __init__.py  agent.py  chat.py  user.py
docs/: ARCHITECTURE.md  CONTEXT_COMPRESSION.md  PRD.md
sql/: postgres_localhost-2026_01_27_19_41_21-dump.sql
