[project]
name = "chuxing"
version = "0.1.0"
description = "生产级 LLM 交互系统 - FastAPI + MongoDB + OpenAI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "openai>=1.54.0",
    "tiktoken>=0.8.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "dateparser>=1.2.0",
    "asyncpg>=0.31.0",
]

[project.scripts]
cli = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "cli"]

[tool.uv]
dev-dependencies = []
